# int_comp_grafica

trabalho_1/: trabalho_1.py  trabalho_1.pyde
trabalho_2/: .cproject  .project  CMakeLists.txt  README.md  camera.py  main.py  tree.py  vector.py  window.py
trabalho_2/src/: Picking.cpp
trabalho_3/: main.py  utils.py  vector.py
